--- a/index.html
+++ b/index.html
@@ -1,182 +1,259 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>🚬 Vape 9000 🛸</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Epic Vape Shop</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    /* (CSS styles unchanged, already applied above) */
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+    body {
+      margin: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: radial-gradient(#0f0c29, #302b63, #24243e);
+      color: #fff;
+      overflow-x: hidden;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      animation: pulse 2s infinite;
+    }
+    .filters, .vape-list, .flavour-list, .cart {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      padding: 1rem;
+    }
+    .card, select {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 1rem;
+      padding: 1rem;
+      width: 150px;
+      text-align: center;
+      cursor: pointer;
+      transition: transform 0.3s, background 0.3s;
+      box-shadow: 0 0 10px #00f2ff;
+    }
+    .card img {
+      width: 100%;
+      border-radius: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+    .card:hover {
+      transform: scale(1.1);
+      background: rgba(0, 242, 255, 0.2);
+    }
+    select {
+      cursor: pointer;
+      color: #fff;
+      border: none;
+      font-family: 'Orbitron';
+      font-size: 0.9rem;
+    }
+    option {
+      color: #000;
+    }
+    button {
+      background: #00f2ff;
+      color: #000;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      font-weight: bold;
+      animation: glow 1.5s infinite alternate;
+    }
+    @keyframes glow {
+      from { box-shadow: 0 0 5px #00f2ff; }
+      to { box-shadow: 0 0 20px #00f2ff; }
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      max-width: 400px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 0.5rem 1rem;
+      border-radius: 0.75rem;
+    }
+    .cart-controls button {
+      margin: 0 0.25rem;
+      padding: 0.3rem 0.6rem;
+    }
   </style>
 </head>
 <body>
-  <div class="screen active" id="screen-choose">
-    <div class="welcome-screen">
-      🚬 Vape 9000 🛸 <br> Добро пожаловать в мир вкуса
-    </div>
-    <div class="filters">
-      <select id="nicotine">
-        <option value="all">Крепость</option>
-        <option value="2%">2%</option>
-        <option value="2.5%">2.5%</option>
-        <option value="5%">5%</option>
-        <option value="6%">6%</option>
-      </select>
-      <select id="puffs">
-        <option value="all">Затяжки</option>
-        <option value="10000">До 10k</option>
-        <option value="20000">10k-20k</option>
-        <option value="30000">20k-30k</option>
-        <option value="40000">40k+</option>
-      </select>
-      <select id="price">
-        <option value="all">Цена</option>
-        <option value="10">€10-€20</option>
-        <option value="20">€20-€30</option>
-        <option value="30">€30+</option>
-      </select>
-    </div>
-    <div class="product-list" id="product-list">
-      <div class="shimmer"></div>
-      <div class="shimmer"></div>
-      <div class="shimmer"></div>
-    </div>
-    <button class="bottom-button" onclick="goToCart()">Корзина и оформление</button>
+  <h1>⚡ Epic Vape Shop ⚡</h1>
+  <div class="filters">
+    <select id="nicotineFilter">
+      <option value="">Nicotine %</option>
+      <option value="2">2%</option>
+      <option value="2.5">2.5%</option>
+      <option value="5">5%</option>
+      <option value="6">6%</option>
+    </select>
+    <select id="puffFilter">
+      <option value="">Puff Count</option>
+      <option value="0-10">0–10k</option>
+      <option value="10-20">10k–20k</option>
+      <option value="20-30">20k–30k</option>
+      <option value="30-50">30k–50k</option>
+    </select>
+    <select id="priceFilter">
+      <option value="">Sort by Price</option>
+      <option value="low">Low to High</option>
+      <option value="high">High to Low</option>
+    </select>
   </div>
-
-  <div class="screen" id="screen-cart">
-    <h2>🛒 Корзина</h2>
-    <div id="cart-items"></div>
-    <div class="cart-summary">Сумма: €<span id="cart-total">0</span></div>
-    <div class="finish-buttons">
-      <button onclick="goToChoose()">← Назад</button>
-      <button onclick="goToFinish()">Продолжить →</button>
-    </div>
-  </div>
-
-  <div class="screen" id="screen-finish">
-    <h2>Завершение</h2>
-    <div class="finish-buttons">
-      <button onclick="sendToStas()">📤 Отправить Стасу</button>
-      <button onclick="goToCart()">← Назад</button>
-      <button onclick="goToChannel()">📣 Перейти в канал</button>
-    </div>
+  <div id="vapeList" class="vape-list"></div>
+  <div id="flavourList" class="flavour-list" style="display:none;"></div>
+  <div id="cart" class="cart"></div>
+  <div style="text-align:center;margin:1rem;">
+    <button onclick="sendOrder()">Send Order to Stas</button>
   </div>
 
   <script>
-    let products = [];
+    const vapes = JSON.parse(`[
+      {"name":"TORNADO 🎲 9k","puffs":9000,"nicotine":"5","price":20,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66885e81ee9cc328347f1cdc_%D0%94%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD%20%D0%B1%D0%B5%D0%B7%20%D0%BD%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20(18).png"},
+      {"name":"TORNADO 🎲 15k","puffs":15000,"nicotine":"2","price":20,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/66870572a00a5ffa6b348a97_photo_2024-06-28_23-05-58.jpg"},
+      {"name":"TORNADO 🎲 20k","puffs":20000,"nicotine":"2.5","price":25,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6800fd637ad8b0c49e9b4a8d_randm-fumot-tornado-max-20000.jpg.webp"},
+      {"name":"TORNADO 🎲 25k","puffs":25000,"nicotine":"2","price":30,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010084b1e19ad8426e31f0_thumb_1284_0_0_0_0_auto.jpg"},
+      {"name":"TORNADO 🎲 30k","puffs":30000,"nicotine":"2","price":35,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801015be861afa63bb79692_fumot-tornado-30k-music-829692.webp"},
+      {"name":"VOZOL Gear ➖ 10k","puffs":10000,"nicotine":"5","price":25,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101749374c38deb8e8f2f_LbjA4HjHKr7DY9FACNgDDQYZWnumvwDpv3hQghwv.webp"},
+      {"name":"VOZOL Gear ➖ 20k","puffs":20000,"nicotine":"2","price":25,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801018cb1e19ad8426f1e7d_VOZOL-GEAR-POWER-20000-1%20(1).jpg"},
+      {"name":"VOZOL Gear ➖ 25k","puffs":25000,"nicotine":"5","price":30,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680101fdcf66a1c4c100b096_vozol%2025k.png"},
+      {"name":"VOZOL Vista plug ➖ 15k","puffs":15000,"nicotine":"2","price":25,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801026f9d2ef545721d5d90_Vozol-Vista-Kit.jpg5_.webp"},
+      {"name":"MEDIAMAX PHONEVAPE 🔴 40k","puffs":40000,"nicotine":"2","price":30,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102844b38ea60299f8bf7_%E4%B8%BB%E5%9B%BE-1.webp"},
+      {"name":"FUMOT/CRYSTAL 🎲 12k","puffs":12000,"nicotine":"2","price":20,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102a07cb5b9af192ac402_Fumot-Crystal-12000-3.jpeg"},
+      {"name":"FUMOT/CRYSTAL 🎲 4.5k","puffs":4500,"nicotine":"2","price":20,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680102d8891db73fae615a83_SKE_Crystal_Super_Max_4500_Puffs_Disposable_Vape_-_Blog_7eeb6280-186a-42c2-a1a9-e11c0b482fda.webp"},
+      {"name":"FUMOT/CRYSTAL 🎲 600","puffs":600,"nicotine":"2","price":10,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/680103086570a3c8dc130efc_fumot-randm-crystal-600ec597076-2ce2-4893-86cc-9eab1c467eb0.webp"},
+      {"name":"IJOY 🎲 40k","puffs":40000,"nicotine":"2","price":30,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/68010323d85907bb35fc96c2_ijoy-sd40000-40k-puffs-ai-voice-control-disposable_1200x1200%20(2).webp"},
+      {"name":"SHISHA VAPE AlFakher 🔵 8k","puffs":8000,"nicotine":"6","price":20,"image":"https://cdn.prod.website-files.com/6685befcece47fe6d2a75ef8/6801034ea74e06c09e2092fc_Al-Fakher-Crown-Bar-PRO-8K-Al-Fakher-262869460.webp"}
+    ]`);
+
+    const flavours = ["Ice Mango", "Blue Razz", "Strawberry Milk", "Cool Mint", "Bubblegum"];
     let cart = [];
 
-    async function loadProducts() {
-      const list = document.getElementById('product-list');
-      list.innerHTML = '<div class="shimmer"></div><div class="shimmer"></div><div class="shimmer"></div>';
-      try {
-        const res = await fetch('vapes.json');
-        products = await res.json();
-        filterProducts();
-      } catch (err) {
-        list.innerHTML = '<p style="color: red">Ошибка загрузки товаров 😢</p>';
+    const vapeListEl = document.getElementById('vapeList');
+    const flavourListEl = document.getElementById('flavourList');
+    const cartEl = document.getElementById('cart');
+
+    document.getElementById('nicotineFilter').onchange = renderVapes;
+    document.getElementById('puffFilter').onchange = renderVapes;
+    document.getElementById('priceFilter').onchange = renderVapes;
+
+    function renderVapes() {
+      const nicotine = document.getElementById('nicotineFilter').value;
+      const puff = document.getElementById('puffFilter').value;
+      const sort = document.getElementById('priceFilter').value;
+
+      let filtered = [...vapes];
+
+      if (nicotine) {
+        filtered = filtered.filter(v => v.nicotine == nicotine);
       }
-    }
+      if (puff) {
+        const [min, max] = puff.split('-').map(Number);
+        filtered = filtered.filter(v => v.puffs >= min * 1000 && v.puffs <= max * 1000);
+      }
+      if (sort) {
+        filtered.sort((a, b) => sort === 'low' ? a.price - b.price : b.price - a.price);
+      }
 
-    function filterProducts() {
-      const nic = document.getElementById('nicotine').value;
-      const puf = document.getElementById('puffs').value;
-      const pri = document.getElementById('price').value;
-
-      const filtered = products.filter(p => {
-        return (nic === 'all' || p.nicotine === nic) &&
-               (puf === 'all' || p.puffs >= parseInt(puf)) &&
-               (pri === 'all' || p.price <= parseInt(pri));
-      });
-
-      displayProducts(filtered);
-    }
-
-    function displayProducts(list) {
-      const container = document.getElementById('product-list');
-      container.innerHTML = '';
-      list.forEach(p => {
-        container.innerHTML += `
-          <div class="product-card">
-            <img src="${p.image}" alt="${p.name}">
-            <h3>${p.name}</h3>
-            <p>Крепость: ${p.nicotine}</p>
-            <p>Затяжек: ${p.puffs}</p>
-            <p>Цена: €${p.price}</p>
-            <button onclick="addToCart('${p.name}', ${p.price})">Добавить</button>
-          </div>`;
+      vapeListEl.innerHTML = '';
+      filtered.forEach(vape => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <img src="${vape.image}" alt="${vape.name}" />
+          <div>${vape.name}<br>${vape.nicotine}% / ${vape.puffs} puffs<br>€${vape.price}</div>
+        `;
+        card.onclick = () => showFlavours(vape);
+        vapeListEl.appendChild(card);
       });
     }
 
-    function addToCart(name, price) {
-      const existing = cart.find(item => item.name === name);
+    function showFlavours(vape) {
+      vapeListEl.style.display = 'none';
+      flavourListEl.style.display = 'flex';
+      flavourListEl.innerHTML = '';
+      flavours.forEach(flavour => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerText = flavour;
+        card.onclick = () => addToCart(vape, flavour);
+        flavourListEl.appendChild(card);
+      });
+    }
+
+    function addToCart(vape, flavour) {
+      const existing = cart.find(item => item.vape === vape.name && item.flavour === flavour);
       if (existing) {
-        existing.qty += 1;
+        existing.qty++;
       } else {
-        cart.push({ name, price, qty: 1 });
+        cart.push({ vape: vape.name, flavour, price: vape.price, qty: 1 });
       }
       updateCart();
+      flavourListEl.style.display = 'none';
+      vapeListEl.style.display = 'flex';
     }
 
     function updateCart() {
-      const container = document.getElementById('cart-items');
-      container.innerHTML = '';
+      cartEl.innerHTML = '<h2>Your Cart</h2>';
       let total = 0;
       cart.forEach((item, i) => {
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        const controls = document.createElement('div');
+        controls.className = 'cart-controls';
+
+        const minus = document.createElement('button');
+        minus.textContent = '-';
+        minus.onclick = () => {
+          if (item.qty > 1) item.qty--;
+          else cart.splice(i, 1);
+          updateCart();
+        };
+
+        const plus = document.createElement('button');
+        plus.textContent = '+';
+        plus.onclick = () => {
+          item.qty++;
+          updateCart();
+        };
+
+        controls.appendChild(minus);
+        controls.appendChild(document.createTextNode(` ${item.qty} `));
+        controls.appendChild(plus);
+
+        div.innerHTML = `<strong>${item.vape}</strong> - ${item.flavour} (€${item.price})`;
+        div.appendChild(controls);
+        cartEl.appendChild(div);
+
         total += item.price * item.qty;
-        container.innerHTML += `
-          <div class="cart-item">
-            <span>${item.name} (€${item.price})</span>
-            <div class="cart-controls">
-              <button onclick="changeQty(${i}, -1)">-</button>
-              ${item.qty}
-              <button onclick="changeQty(${i}, 1)">+</button>
-            </div>
-          </div>`;
       });
-      document.getElementById('cart-total').innerText = total;
+
+      const totalDiv = document.createElement('div');
+      totalDiv.style.marginTop = '1rem';
+      totalDiv.innerHTML = `<h3>Total: €${total.toFixed(2)}</h3>`;
+      cartEl.appendChild(totalDiv);
     }
 
-    function changeQty(index, delta) {
-      cart[index].qty += delta;
-      if (cart[index].qty <= 0) cart.splice(index, 1);
-      updateCart();
+    function sendOrder() {
+      if (cart.length === 0) return alert("Cart is empty!");
+      const message = cart.map(c => `${c.vape} - ${c.flavour} x${c.qty}`).join("%0A");
+      window.open(`https://t.me/stas_vape_nl?start=order_${encodeURIComponent(message)}`, "_blank");
     }
 
-    function showScreen(id) {
-      document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
-
-    function goToCart() {
-      updateCart();
-      showScreen('screen-cart');
-    }
-
-    function goToChoose() {
-      showScreen('screen-choose');
-    }
-
-    function goToFinish() {
-      showScreen('screen-finish');
-    }
-
-    function sendToStas() {
-      alert('Заказ отправлен Стасу!');
-      console.log('Отправка:', cart);
-      cart = [];
-      updateCart();
-      goToChoose();
-    }
-
-    function goToChannel() {
-      window.open("https://t.me/yourchannel", "_blank");
-    }
-
-    document.getElementById('nicotine').addEventListener('change', filterProducts);
-    document.getElementById('puffs').addEventListener('change', filterProducts);
-    document.getElementById('price').addEventListener('change', filterProducts);
-    loadProducts();
+    renderVapes();
   </script>
 </body>
 </html>
